<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/temperature_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/celsius_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Celcius"/>

            <RadioButton
                android:id="@+id/fahrenheit_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"/>

            <RadioButton
                android:id="@+id/kelvin_Fahrenheit_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit_Kelvin"/>

            <RadioButton
                android:id="@+id/kelvin_Celsius_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celcius_Kelvin"/>

        </RadioGroup>



    </LinearLayout>
    <Button
        android:id="@+id/convert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textValorConvertido"
        android:text=""
        android:textAlignment="center"
        android:textSize = "35dp"
        android:textColor="#ffa500"/>

</LinearLayout>